- move cImage label to code in coreimage.
- image list in qconcarent in coreimage.
- fixed coreterminal crashes on closing.
- fix the window size of coreterminal
- fixed coreterminal's type "man ls" shows this "terminal is not ready"
- fixed coreterminal background in black.
- add active window screenshot option corescreenshot.
- removed engrampa from depedencies.


Version 2.1,Released date Friday, June 1, 2018

- fixed battery pointer that caused compiling error in armv8 on dashboard app .
- fixed button ui in corescreenshot app.
- fixed extension crash for coreimage (File.File.File.png like files)
- closeable tab for corepad.
- tabengine moved to switch (for a better code functionality) and checking argument for validation
- moved to non movable page in corefm.
- changed open folder to screen shot folder.
- reload button at bottom in start.
- added support for multiple file's combined size in corefm.
- if bookmark is booked it shows a message and show the section it was booked.
- full trash support.
- notes at coreaction is saved and restored in every restart.
- Fixed Empty the trash.
- battery properties converted to stringlistmodel.
- improved openAppEngine.
- added a button to set search folder in search app.
- fixed corepad's tab related problems.
- QScreen moved to golbalfunctions.
- fixed coreaction focuseout problem.
- redesigned coreaction.
- coreaction's widget is now customizable.
- fixed coreaction setting bug.
- coreaction is now lighter in system resource.
- battery widget in coreaction now updates every 5 second.
- changed corepad page ui.
- corefm's properties would open faster now
- coreaction will automatically hide within 10 sec in startup.
- added drive list in corefm with click to mount support.
- option to make file executable via corefm's properties.
- fixed recent path not opening with double click in start.
- now opening a video file in coreplayer automatically plays it.
- changed properties ui in corefm.